# boilplate

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  Makefile  README.md  lychee.toml  mkdocs.yml  pyproject.toml  renovate.json  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  docs.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  links.yml
docs/: index.md
docs/api/: error-responses.md  fastapi-skeleton.md  go-chi-skeleton.md  index.md  openapi.md  pagination.md
docs/assets/: external-links.js  extra.css
docs/containers/: compose-dev.md  distroless.md  dockerfile-go.md  dockerfile-node.md  dockerfile-python.md  index.md
docs/data/: airflow-dag.md  alembic-skeleton.md  dbt-skeleton.md  index.md  postgres-conventions.md  postgres-indexes.md
docs/examples/: code-blocks.md
docs/github-actions/: container-build.md  index.md  oidc-aws.md  oidc-gcp-azure.md  path-filtered-matrix.md  release.md  reusable-workflows.md
docs/hygiene/: editorconfig.md  gitignore.md  index.md  makefile.md  pre-commit.md
docs/kubernetes/: deployment-baseline.md  helm-skeleton.md  index.md  probes.md  rbac.md  scaling.md
docs/observability/: index.md  opentelemetry.md  prometheus.md  structured-logging.md
docs/terraform/: backends.md  commands.md  iam-policies.md  index.md  module-skeleton.md  providers.md  style-guide.md  variables.md
docs/terraform/aws/: backends.md  iam-policies.md  index.md  module-skeleton.md  providers.md  variables.md
docs/terraform/azure/: backends.md  iam-policies.md  index.md  module-skeleton.md  providers.md  variables.md
docs/terraform/gcp/: backends.md  iam-policies.md  index.md  module-skeleton.md  providers.md  variables.md
docs/terraform/terragrunt/: index.md  root-config.md  stacks.md
docs/terragrunt/: index.md  root-config.md  stacks.md
terragrunt/: .gitignore  terragrunt.hcl
