[project]
name = "boilplate"
version = "0.0.0"
description = "Copy-paste-ready boilerplate, published as an MkDocs Material site."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "RemoteRabbit" }]

dependencies = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5,<10.0",
    "pymdown-extensions>=10.17.1,<12.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3,<2.0",
    "mkdocs-htmlproofer-plugin>=1.3,<2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8,<5.0",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Codespell — typo hunter (runs in pre-commit).
# ---------------------------------------------------------------------------
[tool.codespell]
skip = "uv.lock,site,.venv,*.svg,terragrunt"
ignore-words-list = "hcl,opentofu,fo,nd,te,ot"
check-filenames = true
check-hidden = true
