[project]
name = "boilplate"
version = "0.0.0"
description = "Copy-paste-ready boilerplate, published as an MkDocs Material site."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "RemoteRabbit" }]

dependencies = [
    # Zensical replaces mkdocs + mkdocs-material (built by the same team).
    # Pinned to a known-good alpha; bump deliberately.
    "zensical==0.0.43",
    "pymdown-extensions>=10.17.1,<12.0",
    # Note: git-revision-date-localized and htmlproofer plugins are not yet
    # supported by Zensical (alpha, Phase 1). Link-checking is handled by the
    # `links.yml` workflow via lychee.
]

[dependency-groups]
dev = [
    "pre-commit>=3.8,<5.0",
]

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Codespell: typo hunter (runs in pre-commit).
# ---------------------------------------------------------------------------
[tool.codespell]
skip = "uv.lock,site,.venv,*.svg,terragrunt"
ignore-words-list = "CAF,hcl,opentofu,fo,nd,te,ot"
check-filenames = true
check-hidden = true
